fix long lines not wrapping

--- a/src/component/Comment.module.css
+++ b/src/component/Comment.module.css
@@ -30,6 +30,8 @@
 }
 
 .content {
+  word-break: break-word;
+
   & img {
     max-width: 100%;
   }
